[package]
name = "punchcard"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = { version = "1.5", features = ["derive"] }
bytemuck = { version = "1.14", features = ["derive"] }
five8_const = "0.1"
pinocchio = "0.9"
pinocchio-pubkey = "0.3"
pinocchio-system = "0.4"

[build-dependencies]
solana-program = "3"

[dev-dependencies]
litesvm = "0.9.1"
solana-sdk = "3"

[features]
no-entrypoint = []
